# ChangeLog for dev-ruby/chronic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.1 2011/08/20 09:01:46 graaff Exp $

*chronic-0.6.2 (20 Aug 2011)

  20 Aug 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.2.ebuild,
  +metadata.xml:
  Initial import from graaff overlay. New dependency for dev-ruby/main. Closes
  bug 280143.
