@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/chronic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.1 2011/08/20 09:01:46 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/chronic/ChangeLog,v 1.2 2011/09/10 09:08:50 graaff Exp $
+
+*chronic-0.6.4 (10 Sep 2011)
+
+  10 Sep 2011; Hans de Graaff <graaff@gentoo.org> +chronic-0.6.4.ebuild:
+  Version bump.
 
 *chronic-0.6.2 (20 Aug 2011)
 
